--- a/renderer/index.html
+++ b/renderer/index.html
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles/main.css">
-  </head>
-  <body>
-    <div id="sidebar"></div>
-    <div id="main-content">
-      <div id="tabs"></div>
-      <div id="editor"></div>
-      <div id="terminal"></div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Code Editor</title>
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/editor.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
+  <link rel="stylesheet" href="styles/terminal.css">
+  <link rel="stylesheet" id="theme-stylesheet" href="styles/themes/dark.css">
+</head>
+<body>
+  <div class="app-container">
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+      <div class="sidebar-header">
+        <span class="sidebar-title">Explorer</span>
+        <div class="sidebar-actions">
+          <button id="btn-new-file" title="New File">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 1V15" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                <path d="M1 8H15" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+          </button>
+          <button id="btn-new-folder" title="New Folder">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 3C1 2.44772 1.44772 2 2 2H6.5L8 3.5H14C14.5523 3.5 15 3.94772 15 4.5V13C15 13.5523 14.5523 14 14 14H2C1.44772 14 1 13.5523 1 13V3Z" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M8 7V11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M6 9H10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </button>
+          <button id="btn-refresh" title="Refresh">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14 8C14 11.3137 11.3137 14 8 14C4.68629 14 2 11.3137 2 8C2 4.68629 4.68629 2 8 2C9.67 2 11.1697 2.69 12.2487 3.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M14 3.5V6H11.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="file-explorer" id="file-explorer">
+        <div class="drop-zone">
+          <p>Drag and drop a folder here</p>
+          <p>or</p>
+          <button id="btn-open-folder">Open Folder</button>
+        </div>
+      </div>
     </div>
-    <script src="js/app.js"></script>
-  </body>
+
+    <!-- Main content area -->
+    <div class="main-content">
+      <!-- Tabs -->
+      <div class="tabs-container" id="tabs-container">
+        <div class="tabs" id="tabs">
+          <!-- Tabs will be dynamically added here -->
+        </div>
+      </div>
+      
+      <!-- Editor -->
+      <div class="editor-container" id="editor-container">
+        <div id="monaco-editor"></div>
+      </div>
+      
+      <!-- Terminal -->
+      <div class="terminal-container" id="terminal-container">
+        <div class="terminal-header">
+          <div class="terminal-tabs" id="terminal-tabs">
+            <!-- Terminal tabs will be dynamically added here -->
+          </div>
+          <div class="terminal-actions">
+            <button id="btn-new-terminal" title="New Terminal">+</button>
+            <button id="btn-close-terminal" title="Close Terminal">×</button>
+          </div>
+        </div>
+        <div class="terminals" id="terminals">
+          <!-- Terminal instances will be dynamically added here -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Search panel -->
+  <div class="search-panel" id="search-panel">
+    <div class="search-header">
+      <input type="text" id="search-input" placeholder="Search">
+      <input type="text" id="replace-input" placeholder="Replace">
+      <div class="search-options">
+        <label><input type="checkbox" id="case-sensitive"> Case sensitive</label>
+        <label><input type="checkbox" id="whole-word"> Whole word</label>
+        <label><input type="checkbox" id="use-regex"> Regex</label>
+      </div>
+      <div class="search-actions">
+        <button id="btn-find-prev">Previous</button>
+        <button id="btn-find-next">Next</button>
+        <button id="btn-replace">Replace</button>
+        <button id="btn-replace-all">Replace All</button>
+        <button id="btn-close-search">×</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Load Monaco Editor -->
+  <script>window.require = { paths: { 'vs': '../node_modules/monaco-editor/min/vs' } };</script>
+  <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+  
+  <!-- Load xterm.js -->
+  <link rel="stylesheet" href="../node_modules/xterm/css/xterm.css">
+  
+  <!-- Load application scripts -->
+  <script src="js/app.js" type="module"></script>
+</body>
 </html>
